--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.AlcoolOuGasolina" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#CB584C</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#5D5FEF</item>
+        <item name="colorPrimaryVariant">#4244C4</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorPrimaryDark">#1F1F1F</item>
+        <item name="colorPrimaryDark">#1A1A4B</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#B85045</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#EA4335</item>
+        <item name="colorSecondaryVariant">#FF7F6A</item>
+        <item name="colorOnSecondary">@color/white</item>
 
         <!-- Customize your theme here. -->
         <item name="android:textColorPrimary">@color/black</item>
