--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,9 +13,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#004D40</item>
 
+
         <!-- Customize your theme here. -->
         <item name="android:textColorPrimary">#FFFFFF</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColorHint">#BDBDBD</item>
         <item name="android:backgroundTint">#212121</item>
     </style>
