--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,10 @@
         <item name="colorOnSecondary">@color/white</item>
 
         <!-- Customize your theme here. -->
+        <item name="android:textSize">24sp</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
+
 </resources>
